[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chat_env"
version = "0.1.0"
description = "OpenEnv Customer Support Chat Assistant"
authors = [
    { name = "Aseem", email = "your.email@example.com" }
]
license = { text = "MIT" }
dependencies = [
    "pydantic>=1.10",
    "openenv-core",
    "openai",
    "fastapi",
    "uvicorn"
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
server = "server.app:main"
